--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.40",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4"
