--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
