--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "tailwindcss": "3.4.7",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "vercel": "^39.2.5"
   }
 }
